@@ -92,6 +92,8 @@ CVS code -
   shortcut_init()
 	- Move the "Refresh" and "Exit" shortcuts to the beginning of
 	  the help browser shortcut list, for consistency. (DLR)
+	- Remove unnecessary "Refresh" placeholder in the file browser
+	  shortcut list. (DLR)
   thanks_for_all_the_fish()
 	- Remove free_toggles() and move its code here verbatim, as it's
 	  only called here anyway. (David Benbennick)
